Refactoring and overall optimization. Now using Java 8 for maximum compatibility. Renamed from MikeCommons to LabCommons